updated pom to jenkins requirements